# UniProton_for_Hi3093

demos/hi3093/: CMakeLists.txt
demos/hi3093/apps/openamp/: AD7606.c  CMakeLists.txt  DAC8563.c  ad7606_driver.c  ctltask.c  ctltask.h  dac8563_driver.c  filter.c  filter.h  gpio_def.h  gpio_driver.c  gpio_driver.h  gpio_pin_define.h  gpio_set.c  hi_spi.c  hi_spi.h  main.c  process_rpmsg_cmd.c  rpmsg_protocol.h  soft_spi_device.h  soft_spi_driver.c  soft_spi_driver.h  vibration_control.c  vibration_control.h
demos/hi3093/drivers/: CMakeLists.txt
demos/hi3093/drivers/common/: bm_atomic.h
demos/hi3093/drivers/gpio/: gpio.c
demos/hi3093/drivers/include/: bm_gpio.h
demos/hi3093/drivers/osal/include/: osal_errno.h
demos/hi3093/drivers/osal/uniproton/: osal_interrupt.c  osal_semaphore.c
demos/raspi4/: CMakeLists.txt
demos/raspi4/apps/openamp/: AD7606.c  CMakeLists.txt  DAC8563.c  ctltask.c  ctltask.h  filter.c  filter.h  gpio_def.h  gpio_set.c  main.c  spi.c  spi.h
demos/raspi4/bsp/: print.c
src/component/mica/: rpmsg_backend.h  rpmsg_service.c
